# mlir-sync

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: mlir-ci-macos.yml  mlir-ci-ubuntu.yml  mlir-ci-windows.yml  rust.yml  wasm.yml
cmake/: FindLLVM.cmake  FindMLIR.cmake
crates/mlir_sync/: Cargo.toml  build.rs
crates/mlir_sync/src/: lib.rs  mutex.rs  once.rs  rwlock.rs
crates/mlir_sync/src/combining_lock/: mod.rs  node.rs  rawlock.rs
crates/portable_futex/: Cargo.toml
crates/portable_futex/src/: lib.rs
crates/portable_futex/tests/: wasm.rs
include/Sync/Conversion/: CMakeLists.txt  ConvertSyncToLLVM.h  ConvertSyncToSTD.h  Passes.h  Passes.td  TypeConverter.h
include/Sync/IR/: CMakeLists.txt  SyncDialect.h  SyncDialect.td  SyncOps.h  SyncOps.td  SyncTypes.h  SyncTypes.td
lib/Conversion/: CMakeLists.txt
lib/Conversion/ConvertSyncToLLVM/: CMakeLists.txt  ConvertSyncToLLVM.cpp
lib/Conversion/ConvertSyncToSTD/: CMakeLists.txt  ConvertSyncToSTD.cpp
lib/Conversion/TypeConverter/: CMakeLists.txt  TypeConverter.cpp
lib/IR/: CMakeLists.txt  SyncDialect.cpp  SyncOps.cpp  SyncTypes.cpp
tests/integration/: CMakeLists.txt  combining_lock.mlir  combining_lock_omp_e2e.mlir  combining_lock_omp_e2e_main.c  lit.cfg.py  lit.site.cfg.py.in  mutex_i64_omp_e2e.mlir  mutex_i64_omp_e2e_main.c  once.mlir  once_e2e.mlir  once_e2e_main.c  once_invalid.mlir  once_omp_e2e.mlir  once_omp_e2e_main.c  raw_mutex.mlir  raw_mutex_e2e.mlir  raw_mutex_e2e_main.c  raw_mutex_invalid.mlir  raw_mutex_omp_e2e.mlir  raw_mutex_omp_e2e_main.c  raw_rwlock.mlir  raw_rwlock_e2e.mlir  raw_rwlock_e2e_main.c  raw_rwlock_invalid.mlir  raw_rwlock_omp_e2e.mlir  raw_rwlock_omp_e2e_main.c  run_lit.py  rwlock.mlir  rwlock_i64_omp_e2e.mlir  rwlock_i64_omp_e2e_main.c  rwlock_invalid.mlir
tool/: CMakeLists.txt
tool/sync-opt/: AttachHostLLVMLayout.cpp  CMakeLists.txt  main.cpp
