[package]
name = "portable_futex"
version = "0.1.0"
edition = "2024"

[features]
nightly = []

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["basetsd", "minwindef", "synchapi", "winbase"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1.1.4", default-features = false, features = ["thread"] }
