[package]
name = "portable_futex"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
nightly = []

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["basetsd", "minwindef", "synchapi", "winbase"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-raw-sys = "0.11.0"
syscalls = { version = "0.8.1", default-features = false }
